--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,52 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
 body {
-    background-color: green;
+    padding: 30px 0;
+    width: 100vw;
+    background-image: linear-gradient(90deg, #33FF00, #FF9900);
+}
+
+.todo__body {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.todo__add {
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border: 5px solid rgba(0, 0, 0, 0.6);
+    border-radius: 30px;
+}
+
+.todo__input {
+    padding: 20px 10px;
+    flex: 1 1 auto;
+    background-color: transparent;
+    font-size: 26px;
+    outline: 0;
+    border: 0;
+
+    &:focus {
+        color: white;
+    }
+
+    &::placeholder {
+        color: rgba(0, 0, 0, 0.6);
+    }
+}
+
+.todo__button {
+    background-color: rgba(0, 0, 0, 0.6);
+    border: 0;
+    outline: 0;
+    font-size: 32px;
+    padding: 0 20px;
+    color: white;
 }
