--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,12 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
+    user-select: none;
 }
 
 body {
     padding: 30px 0;
     width: 100vw;
-    background-image: linear-gradient(90deg, #33FF00, #FF9900);
+    background-image: linear-gradient(90deg, #33FF00, #01fb7a);
 }
 
 .todo__body {
@@ -68,7 +69,16 @@ body {
     padding: 20px 20px;
 }
 
+.todo__item.line {
+    .item__left {
+        text-decoration: line-through;
+        text-decoration-color: rgb(0, 255, 0);
+        color: rgb(0, 255, 0);
+    }
+}
+
 .item__left {
+    cursor: pointer;
     font-size: 26px;
     color: white;
 }
@@ -79,4 +89,8 @@ body {
     gap: 20px;
     color: white;
     font-size: 26px;
+}
+
+.item__delete {
+    cursor: pointer;
 }
