--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,7 +9,7 @@
 body {
     padding: 30px 0;
     width: 100vw;
-    background-image: linear-gradient(90deg, #33FF00, #01fb7a);
+    background-image: linear-gradient(90deg, #0047FF, #0094FF);
 }
 
 .todo__body {
@@ -21,12 +21,12 @@ body {
 }
 
 .todo__add {
+    background-color: #00eeff73;
     overflow: hidden;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    border: 5px solid rgba(0, 0, 0, 0.6);
-    border-radius: 30px;
+    border-radius: 10px;
 }
 
 .todo__input {
@@ -50,8 +50,9 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     border: 0;
     outline: 0;
-    font-size: 32px;
-    padding: 0 20px;
+    font-size: 26px;
+    padding: 0 40px;
+    border-radius: 10px;
     color: white;
 }
 
@@ -62,7 +63,7 @@ body {
 }
 
 .todo__item {
-    background-color: rgba(0, 0, 0, 0.6);
+    border: 3px solid white;
     display: flex;
     justify-content: space-between;
     border-radius: 30px;
