--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,7 +9,7 @@
 body {
     padding: 30px 0;
     width: 100vw;
-    background-image: linear-gradient(90deg, #0047FF, #0094FF);
+    background-color: #0e9409;
 }
 
 .todo__body {
@@ -21,7 +21,7 @@ body {
 }
 
 .todo__add {
-    background-color: #00eeff73;
+    background-color: white;
     overflow: hidden;
     width: 100%;
     display: flex;
@@ -47,13 +47,14 @@ body {
 }
 
 .todo__button {
-    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
     border: 0;
     outline: 0;
     font-size: 26px;
     padding: 0 40px;
-    border-radius: 10px;
-    color: white;
+    background-color: black;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .todo__list {
@@ -66,7 +67,7 @@ body {
     border: 3px solid white;
     display: flex;
     justify-content: space-between;
-    border-radius: 30px;
+    border-radius: 10px;
     padding: 20px 20px;
 }
 
@@ -99,4 +100,8 @@ body {
 
 .item__delete {
     cursor: pointer;
+
+    &:hover {
+        color: red;
+    }
 }
