--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,8 @@
 }
 
 body {
-    width: 1200px;
+    width: 100vw;
     height: 100vh;
-    margin: 0 auto;
+    background-color: #fff;
+    background-image: linear-gradient(90deg, #0047FF, #0094FF);
 }
